United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6921317 G1: assert(top() == bottom() || zfs == Allocated,"Region must be empty, or we must be setting it to
6921317 : G1: assert(top() == bottom() || zfs == Allocated,"Region must be empty, or we must be setting it to

Details
Type:
Bug
Submit Date:
2010-01-29
Status:
Resolved
Updated Date:
2011-01-19
Project Name:
JDK
Resolved Date:
2010-06-01
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs19

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
During BigApps testing I've got this crash. (-XX:+UseG1GC -XX:+AggressiveOpts are used)

;; Using jvm: "C:/local/common/jdk/baseline/windows-i586/jre/bin/server/jvm.dll"
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (C:\BUILD_AREA\jdk7\hotspot\src\share\vm\gc_implementation\g1\heapRegion.cpp:538), pid=6556, tid=3660
#  Error: assert(top() == bottom() || zfs == Allocated,"Region must be empty, or we must be setting it to allocated.")
#
# JRE version: 7.0-b80
# Java VM: Java HotSpot(TM) Server VM (17.0-b07-fastdebug mixed mode windows-x86 )
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------

Current thread (0x01b5f400):  ConcurrentGCThread [stack: 0x064c0000,0x06510000] [id=3660]

Stack: [0x064c0000,0x06510000],  sp=0x0650fd54,  free space=13f0650fd64k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [jvm.dll+0x547a12];;  ?report_and_die@VMError@@QAEXXZ+0x4d2
V  [jvm.dll+0x2049a1];;  ?report_fatal@@YAXPBDH0@Z+0x41
V  [jvm.dll+0x29e66b];;  ?set_zero_fill_state_work@HeapRegion@@QAEXW4ZeroFillState@1@@Z+0x2b
V  [jvm.dll+0x1f849d];;  ?run@ConcurrentZFThread@@UAEXXZ+0xfd
V  [jvm.dll+0x4521ff];;  ?java_start@@YGIPAVThread@@@Z+0xaf
C  [msvcr71.dll+0x9565]
C  [kernel32.dll+0x4d0e9]
C  [ntdll.dll+0x419bb]
C  [ntdll.dll+0x4198e]


---------------  P R O C E S S  ---------------

Java Threads: ( => current thread )
  0x01a0f800 JavaThread "DestroyJavaVM" [_thread_blocked, id=6600, stack(0x008f0000,0x00940000)]
  0x08aad800 JavaThread "Thread-1" daemon [_thread_in_native, id=5352, stack(0x07150000,0x071a0000)]
  0x0902ec00 JavaThread "Thread-0" [_thread_blocked, id=2544, stack(0x070d0000,0x07120000)]
  0x065f9c00 JavaThread "Low Memory Detector" daemon [_thread_blocked, id=4204, stack(0x06bf0000,0x06c40000)]
  0x065f8400 JavaThread "CompilerThread1" daemon [_thread_blocked, id=2352, stack(0x069f0000,0x06af0000)]
  0x065f7800 JavaThread "CompilerThread0" daemon [_thread_in_native, id=6396, stack(0x068f0000,0x069f0000)]
  0x065f1c00 JavaThread "Attach Listener" daemon [_thread_blocked, id=6940, stack(0x068a0000,0x068f0000)]
  0x065f1000 JavaThread "Signal Dispatcher" daemon [_thread_blocked, id=3876, stack(0x06850000,0x068a0000)]
  0x065f0800 JavaThread "Surrogate Locker Thread (CMS)" daemon [_thread_blocked, id=6832, stack(0x06800000,0x06850000)]
  0x065cc400 JavaThread "Finalizer" daemon [_thread_blocked, id=3840, stack(0x067b0000,0x06800000)]
  0x065c8800 JavaThread "Reference Handler" daemon [_thread_blocked, id=7972, stack(0x06760000,0x067b0000)]

Other Threads:
  0x065c3800 VMThread [stack: 0x06710000,0x06760000] [id=2396]
  0x0660b400 WatcherThread [stack: 0x06c40000,0x06c90000] [id=4476]

=>0x01b5f400 (exited) ConcurrentGCThread [stack: 0x064c0000,0x06510000] [id=3660]

VM state:at safepoint (normal execution)

VM Mutex/Monitor currently owned by a thread:  ([mutex/lock_event])
[0x01ae5b50] ZF_mon - owner thread: 0x01b5f400
[0x01a0e908] Threads_lock - owner thread: 0x065c3800
[0x01a0ef98] Heap_lock - owner thread: 0x0902ec00

Heap
 garbage-first heap   total 32768K, used 15139K [0x10100000, 0x12100000, 0x18100000)
  region size 1024K, 0 young (0K), 1 survivors (1024K)
 compacting perm gen  total 16384K, used 6695K [0x18100000, 0x19100000, 0x1c100000)
   the space 16384K,  40% used [0x18100000, 0x18789db8, 0x18789e00, 0x19100000)
No shared spaces configured.

Dynamic libraries:
0x00400000 - 0x0042b000 	C:\local\common\jdk\baseline\windows-i586\bin\java.exe
0x772c0000 - 0x773e7000 	C:\Windows\system32\ntdll.dll
0x77440000 - 0x7751c000 	C:\Windows\system32\kernel32.dll
0x76650000 - 0x76716000 	C:\Windows\system32\ADVAPI32.dll
0x768e0000 - 0x769a3000 	C:\Windows\system32\RPCRT4.dll
0x765b0000 - 0x7664d000 	C:\Windows\system32\USER32.dll
0x76720000 - 0x7676b000 	C:\Windows\system32\GDI32.dll
0x742a0000 - 0x7443e000 	C:\Windows\WinSxS\x86_microsoft.windows.common-controls_6595b64144ccf1df_6.0.6002.18005_none_5cb72f96088b0de0\COMCTL32.dll
0x770c0000 - 0x7716a000 	C:\Windows\system32\msvcrt.dll
0x76ed0000 - 0x76f29000 	C:\Windows\system32\SHLWAPI.dll
0x773f0000 - 0x7740e000 	C:\Windows\system32\IMM32.DLL
0x76480000 - 0x76548000 	C:\Windows\system32\MSCTF.dll
0x77420000 - 0x77429000 	C:\Windows\system32\LPK.DLL
0x76ba0000 - 0x76c1d000 	C:\Windows\system32\USP10.dll
0x7c340000 - 0x7c396000 	C:\local\common\jdk\baseline\windows-i586\jre\bin\msvcr71.dll
0x08000000 - 0x087d9000 	C:\local\common\jdk\baseline\windows-i586\jre\bin\server\jvm.dll
0x739d0000 - 0x739d7000 	C:\Windows\system32\WSOCK32.dll
0x76580000 - 0x765ad000 	C:\Windows\system32\WS2_32.dll
0x77430000 - 0x77436000 	C:\Windows\system32\NSI.dll
0x73ac0000 - 0x73af2000 	C:\Windows\system32\WINMM.dll
0x77170000 - 0x772b5000 	C:\Windows\system32\ole32.dll
0x76db0000 - 0x76e3d000 	C:\Windows\system32\OLEAUT32.dll
0x739e0000 - 0x73a19000 	C:\Windows\system32\OLEACC.dll
0x75770000 - 0x7579c000 	C:\Windows\system32\apphelp.dll
0x10000000 - 0x10010000 	C:\local\common\jdk\baseline\windows-i586\jre\bin\verify.dll
0x003d0000 - 0x003f6000 	C:\local\common\jdk\baseline\windows-i586\jre\bin\java.dll
0x008d0000 - 0x008db000 	C:\local\common\jdk\baseline\windows-i586\jre\bin\hpi.dll
0x75960000 - 0x75967000 	C:\Windows\system32\PSAPI.DLL
0x00950000 - 0x0096d000 	C:\local\common\jdk\baseline\windows-i586\jre\bin\zip.dll
0x07090000 - 0x070af000 	C:\local\common\jdk\baseline\windows-i586\jre\bin\net.dll
0x74f70000 - 0x74fab000 	C:\Windows\system32\mswsock.dll
0x74fe0000 - 0x74fe5000 	C:\Windows\System32\wship6.dll
0x74b80000 - 0x74b8f000 	C:\Windows\system32\NLAapi.dll
0x751d0000 - 0x751e9000 	C:\Windows\system32\IPHLPAPI.DLL
0x75190000 - 0x751c5000 	C:\Windows\system32\dhcpcsvc.DLL
0x75410000 - 0x7543c000 	C:\Windows\system32\DNSAPI.dll
0x75800000 - 0x75814000 	C:\Windows\system32\Secur32.dll
0x75180000 - 0x75187000 	C:\Windows\system32\WINNSI.DLL
0x75150000 - 0x75172000 	C:\Windows\system32\dhcpcsvc6.DLL
0x72500000 - 0x7250f000 	C:\Windows\system32\napinsp.dll
0x724f0000 - 0x724f8000 	C:\Windows\System32\winrnr.dll
0x76c20000 - 0x76c69000 	C:\Windows\system32\WLDAP32.dll
0x74b90000 - 0x74b95000 	C:\Windows\System32\wshtcpip.dll
0x72650000 - 0x72656000 	C:\Windows\system32\rasadhlp.dll

VM Arguments:
jvm_args: -Xmixed -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -XX:+AggressiveOpts -XX:-PrintVMOptions -XX:+DisplayVMOutputToStderr -Xmx128M 
java_command: S:/comp/vm/testbase/bigapps/Weblogic/Weblogic+medrec/jmeter/bin/ApacheJMeter.jar -n -t S:/comp/vm/testbase/bigapps/Weblogic/Weblogic+medrec/Weblogic+medrec.jmx -l c:/local/30541.JDK7.PROMOTION.BIGAPPS+bigapps_Weblogic+medrec_windows-i586_server_mixed_G1GC/results/client/33/results.xml -Jduration=180 -Jthreadcount=2
 -Jhttpclient.timeout=1500 -Jhttpclient.socket.timeout=1500
Launcher Type: SUN_STANDARD

Environment Variables:
JAVA_HOME=C:/local/common/jdk/baseline/windows-i586
PATH=C;C:\Cygwin\local\common\jdk\baseline\windows-i586\bin;\usr\sge\sge6\bin\cygwin-x86;C:\Cygwin\bin;C:\Cygwin\bin;C:\Cygwin\usr\local\bin;C:\Cygwin\usr\sge\sge6\bin\cygwin-x86;C:\Cygwin\bin;C:\Cygwin\bin;C:\Cygwin\usr\local\bin;C:\Cygwin\usr\local\bin;C:\Cygwin\bin;C:\Cygwin\bin;C:\Cygwin\usr\X11R6\bin;C:\Cygwin\tmp\414662.1.all.q;C:\Cygwin\usr\local\bin;C:\Cygwin\bin;C:\Cygwin\bin;C:\Cygwin\lib\lapack;c:\Windows\System32
USERNAME=root
LD_LIBRARY_PATH=C:\Cygwin\usr\sge\sge6\lib\cygwin-x86;C:\Cygwin\usr\sge\sge6\lib\cygwin-x86;C:\Cygwin\usr\sge\sge6\lib\cygwin-x86
SHELL=/bin/ksh
OS=Windows
PROCESSOR_IDENTIFIER=x86 Family 15 Model 5 Stepping 10, AuthenticAMD



---------------  S Y S T E M  ---------------

OS: Windows Server 2008 Build 6002 Service Pack 2

CPU:total 2 (1 cores per cpu, 1 threads per core) family 15 model 5 stepping 10, cmov, cx8, fxsr, mmx, sse, sse2, mmxext, 3dnow, 3dnowext

Memory: 4k page, physical 2095952k(134744k free), swap 4447076k(2419664k free)

vm_info: Java HotSpot(TM) Server VM (17.0-b07-fastdebug) for windows-x86 JRE (1.7.0-ea-fastdebug-b80), built on Jan 21 2010 03:43:09 by "java_re" with MS VC++ 7.1 (VS2003)

time: Wed Jan 27 10:48:48 2010
elapsed time: 9 seconds

                                    

Comments
EVALUATION

Andrey pushed some extra instrumentation in terms of this CR to help us track this down when we hit it again during testing (it's been very hard to reproduce so far). When we track down the reason, we'll open a separate CR to fix it.
                                     
2010-05-17
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/cc387008223e
                                     
2010-05-14



Hardware and Software, Engineered to Work Together