6921317: (partial) G1: assert(top() == bottom() || zfs == Allocated,"Region must be empty, or we must be setting it to

Extended the failing assertion with the new message format to get more data.

Reviewed-by: tonyp